부트스트랩 추가

--- a/src/main/resources/templates/HelloWorld.html
+++ b/src/main/resources/templates/HelloWorld.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link th:href="@{/css/title.css}" rel="stylesheet">
+<script type="text/javascript" src="/js/header.js"></script>
 <title>Insert title here</title>
 </head>
 <body>
-${cursor}	
+	<div class="high">안녕하세요</div><br>
+	<img th:src="@{/img/kongyu.jpg}">	
 </body>
 </html>
